--- a/server/package.json
+++ b/server/package.json
@@ -13,7 +13,9 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.19.2",
-    "socket.io": "^4.7.5"
+    "redis": "^4.7.0",
+    "socket.io": "^4.7.5",
+    "socket.io-redis": "^5.4.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
